Physical objects can't sleep when I use overlay scene in BGE #45278

Closed
opened 2015-07-02 20:16:53 +02:00 by Sergey Tarasyuk · 6 comments

System Information
OS: Windows 8.1
Card: NVIDIA GeForce GT 710M

Blender Version
Broken: 2.74

Short description of error
Physical objects (rigid body, convex hull collision bounds) can't sleep when I use overlay scene in BGE.

Exact steps for others to reproduce the error
Because my English isn't good, I recorded screencast. You can watch it here:
https://www.youtube.com/watch?v=41VqqSI4bhI

Also you can download my test scene here:
http://games.stereopyram.com/downloads/Bug.blend

**System Information** OS: Windows 8.1 Card: NVIDIA GeForce GT 710M **Blender Version** Broken: 2.74 **Short description of error** Physical objects (rigid body, convex hull collision bounds) can't sleep when I use overlay scene in BGE. **Exact steps for others to reproduce the error** Because my English isn't good, I recorded screencast. You can watch it here: https://www.youtube.com/watch?v=41VqqSI4bhI Also you can download my test scene here: http://games.stereopyram.com/downloads/Bug.blend

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Tarasyuk self-assigned this 2015-07-02 20:16:53 +02:00

Added subscriber: @tgames

Added subscriber: @tgames
Sergey Tarasyuk was unassigned by Aaron Carlisle 2015-07-02 20:20:44 +02:00
Aaron Carlisle self-assigned this 2015-07-02 20:20:44 +02:00
Aaron Carlisle removed their assignment 2015-07-02 20:21:03 +02:00
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm the bug. I upload the blend here for better access.
Bug.blend

I confirm the bug. I upload the blend here for better access. [Bug.blend](https://archive.blender.org/developer/F200419/Bug.blend)

This issue was referenced by 221aee7ecd

This issue was referenced by 221aee7ecdb352f87e6baae87061fbfc05e8f819

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45278
No description provided.