BGE: Fix T45278 sleeping deactivation with overlay scene.

this commit fix also angular and linear threshold sleeping value update via bge.constraints.